IDE autorefactorings , updates